Update and rename logo.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="g.css">
+
 <link rel="stylesheet" type="text/css" href="logo.css">
 <span class="text">Nitrot</span>
 <span class="b">Accounts</span>
