--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <link rel="stylesheet" type="text/css" href="g.css">
 
 <link rel="stylesheet" type="text/css" href="logo.css">
-<span class="text">Nitrot</span>
-<span class="b">Accounts</span>
+<span  style="font-size:105px;font-family: Gang Wolfik">N</span>
