--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" type="text/css" href="g.css">
 
 <link rel="stylesheet" type="text/css" href="logo.css">
-<span  style="font-size:105px;font-family: Gang Wolfik">N</span>
+<span  style="font-size:200px;font-family: Gang Wolfik">Nitrot</span>
