--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <link rel="stylesheet" type="text/css" href="logo.css">
 
 
-<span  style="font-size:200px;font-family: Gang Wolfik">Nitrot</span>
+<span  style="font-size:200px;font-family: Gang Wolfik">N</span>
